<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant"
    android:orientation="vertical"
    tools:context=".view.fragment.SettingFragment">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:text="@string/Settings"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
       />

    <TextView
           android:id="@+id/lang_txt"
           android:layout_width="wrap_content"
           android:layout_marginTop="40dp"
           android:clickable="true"
           android:layout_height="wrap_content"
           android:textColor="@color/white"
           android:textSize="18dp"
           android:layout_marginStart="16dp"
           android:text="@string/lang" />


    <RadioGroup
        android:id="@+id/lang_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:padding="5dp"
        >


        <RadioButton
            android:id="@+id/Arabic_rd_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:buttonTint="@color/white"
            android:text="@string/arabic" />

        <RadioButton
            android:id="@+id/English_rd_btn"
            android:layout_width="wrap_content"
            android:buttonTint="@color/white"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:text="@string/english" />

    </RadioGroup>


        <TextView
            android:id="@+id/temp_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:clickable="true"
            android:textSize="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/temp" />


        <RadioGroup
            android:id="@+id/temp_img_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/c_rd_btn"
                android:layout_width="wrap_content"
                android:buttonTint="@color/white"
                android:textColor="@color/yellow"
                android:layout_height="wrap_content"
                android:text="@string/celsius" />

            <RadioButton
                android:id="@+id/k_rd_btn"
                android:layout_width="wrap_content"
                android:buttonTint="@color/white"
                android:textColor="@color/yellow"
                android:layout_height="wrap_content"
                android:text="@string/kelvin" />

            <RadioButton
                android:id="@+id/f_rd_btn"
                android:layout_width="wrap_content"
                android:textColor="@color/yellow"
                android:buttonTint="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit" />



        </RadioGroup>

</LinearLayout>