<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/register_card"
    app:cardCornerRadius="20dp"
    android:background="@drawable/dialog_background"
    app:cardElevation="10dp"
    android:focusableInTouchMode="false"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:id="@+id/my_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/roundshape">

            <EditText
                android:id="@+id/Describtion_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@color/white"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textSize="17sp"></EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/Date"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            app:hintTextColor="@color/light_purple">

            <TextView
                android:id="@+id/calender_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_baseline_today_24"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/dd_mm_yy"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/firstRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/fromTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/From"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputfrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    app:hintTextColor="@color/light_purple">

                    <TextView
                        android:id="@+id/fromTimeImg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:drawableRight="@drawable/ic_baseline_access_alarm_24"
                        android:hint="@string/timeZero"
                        android:inputType="time"
                        android:maxLines="1"
                        android:textSize="17sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/toTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/to"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Describtion_tv" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    app:hintTextColor="@color/light_purple">

                    <TextView
                        android:id="@+id/toTimeImg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:drawableRight="@drawable/ic_baseline_access_alarm_24"
                        android:hint="@string/timeZero"
                        android:inputType="time"
                        android:maxLines="1"
                        android:textSize="17sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </LinearLayout>


        <!--LinearLayout
            android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <CheckBox
                android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notification"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondRow" />
            <CheckBox
                android:id="@+id/loopSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alarmSound" />
        </LinearLayout-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/Events"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/event_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:entries="@array/event_options"
                    android:popupBackground="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/soundType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/soundType"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/sound_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:entries="@array/alarm_type"
                    android:popupBackground="@color/white" />
            </LinearLayout>

        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
        <Button
            android:id="@+id/add_alarm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/roundshape"
            android:text="@string/save_add_btn"
            android:textColor="@color/white" />
    <Button
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="21dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/roundshape"
        android:text="@string/cancel"
        android:textColor="@color/white" />
</LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>